--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start -p $PORT"
+    "start": "node server.js -p $PORT"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
+    "express": "^4.17.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.1.4",
+    "node-sass": "^4.13.0",
     "raw-loader": "^4.0.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
