--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "express": "^4.17.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.1.4",
-    "node-sass": "^4.13.0",
+    "prop-types": "^15.7.2",
     "raw-loader": "^4.0.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-icons": "^3.8.0",
     "react-markdown": "^4.2.2"
+  },
+  "devDependencies": {
+    "node-sass": "^4.13.0",
+    "styled-jsx-plugin-sass": "^1.0.0"
   }
 }
