--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js -p $PORT"
   },
   "dependencies": {
-    "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-css": "^1.0.1",
     "express": "^4.17.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.1.4",
@@ -18,9 +18,5 @@
     "react-dom": "16.12.0",
     "react-icons": "^3.8.0",
     "react-markdown": "^4.2.2"
-  },
-  "devDependencies": {
-    "node-sass": "^4.13.0",
-    "styled-jsx-plugin-sass": "^1.0.0"
   }
 }
