--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "express": "^4.17.1",
+    "formik": "^2.1.2",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.1.4",
     "prop-types": "^15.7.2",
@@ -18,6 +19,7 @@
     "react-dom": "16.12.0",
     "react-icons": "^3.8.0",
     "react-markdown": "^4.2.2",
-    "react-text-ellipsis": "^1.6.0"
+    "react-text-ellipsis": "^1.6.0",
+    "yup": "^0.28.0"
   }
 }
