--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "16.12.0",
     "react-icons": "^3.8.0",
     "react-markdown": "^4.2.2",
+    "react-modal": "^3.11.1",
     "react-slick": "^0.25.2",
     "react-text-ellipsis": "^1.6.0",
     "slick-carousel": "^1.8.1",
