--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "aos": "^3.0.0-beta.6",
     "express": "^4.17.1",
     "formik": "^2.1.2",
     "isomorphic-unfetch": "^3.0.0",
